engine/src/R3E/j3x/tests/bad/wrong_type_4.j3x
vector a = ("5", "6")